# work-frontier

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  package.json  pnpm-lock.yaml  pyproject.toml  skills-lock.json  work-frontier-interactive-onboarding-full.patch
.github/workflows/: ci.yml
.omo/: recertify-todo-1-4.sh
.omo/drafts/: full-product-implementation.md
.omo/evidence/archive/: contracts-fail-20260712-144803.json  contracts.json  import-boundaries.json  migration-smoke.json  minio-roundtrip.json
.omo/evidence/preflight-adr-006/: validation.json
.omo/evidence/static/: WF-HAR-CONTRACT-05.json  WF-HAR-CONTRACT-05.stdout.txt  WF-HAR-INTEG-01.json  WF-HAR-INTEG-01.stderr.txt  WF-HAR-INTEG-01.stdout.txt  WF-HAR-INTEG-02.json  WF-HAR-INTEG-02.stdout.txt  WF-HAR-PREFLIGHT-01.json  WF-HAR-PREFLIGHT-01.stdout.txt  WF-HAR-STATIC-01.json  WF-HAR-STATIC-02.json  WF-HAR-STATIC-04.json  WF-HAR-STATIC-04.stdout.txt  WF-HAR-STATIC-05.json  WF-HAR-STATIC-05.stderr.txt  contracts.json  import-boundaries.json  migration-smoke.json  minio-roundtrip.json
.omo/evidence/task-1-full-product-implementation/: verification.json
.omo/evidence/task-2-full-product-implementation/: verification.json
.omo/evidence/task-3-full-product-implementation/: verification.json
.omo/evidence/task-4-full-product-implementation/: verification.json
.omo/evidence/task-5-full-product-implementation/: foundation-recertification.json
.omo/plans/: full-product-implementation.md
.omo/reports/: todo-1-4-recertification.md
backend/contracts/: __init__.py  evidence_record.py
backend/lib/: __init__.py  evidence_collector.py
backend/tests/: docs_test_setup_documentation.py  test_bootstrap.py  test_import_boundaries.py  test_import_matrix_coverage.py  test_migration_smoke.py  test_setup_asset_drift.py
contracts/: COMPATIBILITY.md  evidence-record.schema.json  harness-lifecycle.json  harness-registry.json
docs/: development.md  index.md
docs/anatomy/: _diagram-data.json  _entrypoint-scan.json  _graph.json  _manifest.json  _modules.json  data-model.md  deployment.md  entry-points.md  index.md  system-diagram.html  system-diagram.md
docs/architecture/: ARCHITECTURE.md
docs/decisions/: ADR-002-tracker-neutral-engine.md  ADR-003-modular-monolith.md  ADR-004-evidence-backed-completion.md  ADR-005-github-first-controlled-cutover.md  ADR-006-foundation-contracts.md  ADR-index.md
docs/delivery/: implementation-sequence.md  traceability-matrix.md
docs/domain/: attention-items.md  authority-statuses.md  decision-record.md  edges.md  gates-and-evidence.md  lifecycle-and-completion.md  program.md  readiness-ranking.md  recommended-next.md  state-machines.md  terminology.md  tracker-connection.md  work-item.md  work-lease.md
docs/integrations/: GITHUB.md  PIPEDREAM_MCP_SMOKE_TEST.md
docs/operations/: backup-restore-dr.md  deployment-profiles.md  final-deployment-runbook.md  incident-response.md  manual-qa-attestation.example.json  setup-center.md  slo-observability.md  upgrades-compatibility.md
docs/product/: overview.md  users-and-jobs.md  vision.md
docs/quality/: harness-catalog.md  performance-envelope.md  release-certification.md  verification-strategy.md
docs/security/: ai-governance.md  authorization.md  secure-development-lifecycle.md  tenancy-isolation.md  threat-model.md
docs/ux/: ux-accessibility-design-system.md  ux-architecture.md  ux-critical-journeys.md  ux-onboarding.md
docs/vi/: glossary.md  operations-overview.md  user-journeys.md  work-frontier-overview.md
frontend/: biome.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  setup.html  tsconfig.json  vite.config.ts
frontend/lib/: evidence-collector.ts
frontend/src/: hello.ts  main.tsx
frontend/tests/: hello.test.ts
infra/: __init__.py
infra/alembic/: env.py  script.py.mako
infra/compose/: compose.production.yaml
infra/docker/: Dockerfile
infra/kubernetes/: work-frontier.yaml
infra/observability/: alerts.yml  prometheus.yml
scripts/: __init__.py  build_harness_registry.py  build_setup_assets.mjs  certify_plan_through_item_13.py  certify_plan_through_item_19.py  certify_plan_through_item_27.py  certify_plan_through_item_35.py  certify_plan_through_item_9.py  check_anatomy_drift.py  check_import_boundaries.py  check_setup_assets.py  doctor.py  finalize_final_verification.py  finalize_plan_through_item_8.py  generate_contracts.py  generate_zod_from_schema.mjs  migration_smoke.py  minio_roundtrip.py  run_cutover_539.py  run_domain_authority_harness.py  run_domain_graph_harness.py  run_domain_policy_harness.py  run_final_audits.py  run_final_harness.py  run_frontier_harness.py  run_harness.py  run_ops_harness.py  run_platform_harness.py  run_release_certification.py  run_security_harness.py  run_wave3_harness.py  run_wave4_harness.py  update_539_fixture.py  zod_record_constraints.mjs  zod_record_constraints.test.mjs
(+325 files in other folders)
