[project]
name = "work-frontier"
version = "0.1.0"
description = "Standalone dependency-aware readiness control plane"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pydantic>=2.11.0"]

[dependency-groups]
dev = [
    "alembic>=1.16.0",
    "basedpyright>=1.31.0",
    "boto3>=1.40.0",
    "boto3-stubs[s3]>=1.40.0",
    "hypothesis>=6.98.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/work_frontier"]

[tool.basedpyright]
typeCheckingMode = "all"
pythonVersion = "3.13"
pythonPlatform = "All"
include = ["backend/lib", "backend/src", "backend/tests", "scripts"]
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist", "backend/tests/fixtures"]
reportUnusedCallResult = "warning"
reportUnusedVariable = "error"
reportMissingParameterType = "error"
reportPrivateUsage = "error"
reportAny = "none"
reportExplicitAny = "none"

[[tool.basedpyright.executionEnvironments]]
root = "scripts"
extraPaths = ["backend/src"]
reportUnknownMemberType = "none"
reportImplicitStringConcatenation = "none"

[[tool.basedpyright.executionEnvironments]]
root = "backend/lib"
extraPaths = ["backend/src"]
reportImplicitStringConcatenation = "none"

[[tool.basedpyright.executionEnvironments]]
root = "."
extraPaths = ["backend/src"]
reportImplicitStringConcatenation = "none"

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["backend/lib", "backend/src", "backend/tests", "scripts"]
extend-exclude = ["backend/tests/fixtures"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "CPY001", "D203", "D213", "FBT001", "FBT002", "FIX002", "ISC001", "TD002", "TD003"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"backend/src/work_frontier/contracts/evidence_*.py" = ["PLC0415", "S607", "ARG001", "PLR0913", "C901", "PLR0911", "PLR0912", "S603", "SIM105"]
"backend/src/work_frontier/contracts/decision_record.py" = ["D105", "D107", "PERF403", "PLW0108"]
"backend/src/work_frontier/contracts/harness_*.py" = ["D103", "C901", "PLR0911", "S602", "SIM108", "RET504", "PLR0912", "PLR0913", "PLC0415", "S603"]
"backend/tests/**/*.py" = ["D", "PLC0415", "PLR2004", "S101", "S607"]
"scripts/**/*.py" = ["C901", "INP001", "PLC0415", "PLR0911", "PLR0915", "PLR2004", "S603", "S607", "SIM102", "T201", "TRY301", "BLE001", "EXE001", "D103", "RET504"]
"scripts/minio_roundtrip.py" = ["S105"]
"backend/lib/evidence_collector.py" = ["PLR0913", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["backend/tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
filterwarnings = ["error"]
pythonpath = ["."]
